Added defensive copying in CarStatus.java.